--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
+		  
             <li><a href="https://www.selenagomez.com/">Know More ♫</a></li>
             <li><a href="https://orionstar25.github.io/">Creator ★ </a></li>
           </ul>
+		<button class="btn btn-danger navbar-btn">Button</button>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
