--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <a class="navbar-brand" href="index.html">Welcome to the tapes! </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
+          <ul class="nav navbar-nav-right">
+             <li class="active"><a href="#">Home</a></li> 
 		  
             <li><a href="https://www.selenagomez.com/">Know More ♫</a></li>
             <li><a href="https://orionstar25.github.io/">Creator ★ </a></li>
